# stop-discord-phishingPy

./: .gitignore  README.md  example.py  pyproject.toml
stopPhishing/: __init__.py
stopPhishing/functions/: amount.py  check.py  list.py
